[metadata]
# replace with your username:
name = robotictools
version = 0.0.1
author = He Mingshan
author_email = hemingshan_1999@163.com
description = A small package tool for robotic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MingshanHe/robotictool
project_urls =
    Bug Tracker = https://github.com/MingshanHe/robotictool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6